--- a/jinja2/index.html.jinja2
+++ b/jinja2/index.html.jinja2
@@ -20,10 +20,10 @@
 				<div class="card" id="makeup1" data-destination="makeup/"><div class="cover"></div><div class="text"><span>Data</span></div></div>
 				<div class="card" id="makeup2" data-destination="makeup-narrative/"><div class="cover"></div><div class="text"><span>Narrative</span></div></div>
 			</div>
-			<div class="survey-section disabled">
+			<div class="survey-section">
 				<div class="subhead">Academics</div>
-				<div class="card" id="ac1" {# data-destination="academics/" #}><div class="cover"></div><div class="text"><span>Data</span></div></div>
-				<div class="card" id="ac2" {# data-destination="academics-narrative/" #}><div class="cover"></div><div class="text"><span>Narrative</span></div></div>
+				<div class="card" id="ac1" data-destination="academics/"><div class="cover"></div><div class="text"><span>Data</span></div></div>
+				<div class="card" id="ac2" data-destination="academics-narrative/"><div class="cover"></div><div class="text"><span>Narrative</span></div></div>
 			</div>
 		</div>
 		<div class="section-container clearfix">
