--- a/jinja2/_base.html.jinja2
+++ b/jinja2/_base.html.jinja2
@@ -12,8 +12,17 @@
         <link rel="stylesheet" type="text/css" href="css/fonts.css">
         <link rel="stylesheet" type="text/css" href="css/nv.d3.css">
 
+
+        <script>
+            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+            })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+            ga('create', 'UA-327124-1', 'thecrimson.com');
+            ga('send', 'pageview');
+        </script>
         <script src="//code.jquery.com/jquery-latest.min.js" type="text/javascript" charset="utf-8"></script>
-        <!-- <script src="//s7.addthis.com/js/300/addthis_widget.js#pubid=thecrimson" type="text/javascript"></script> -->
+        <script src="//s7.addthis.com/js/300/addthis_widget.js#pubid=thecrimson" type="text/javascript"></script>
         <script src="js/jquery-csv.min.js"></script>
         <script src="js/jquery.affix.js" type="text/javascript" charset="utf-8"></script>
         <script src="js/jquery.tabs.js" type="text/javascript" charset="utf-8"></script>
@@ -31,16 +40,6 @@
         <script src="js/legend.js"></script>
         <script src="js/scatter.js"></script>
 
-        <script type="text/javascript">
-            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-            })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-            ga('create', '{{ ANALYTICS_USER_AGENT }}', 'thecrimson.com');
-            ga('send', 'pageview');
-        </script>
-
         {% block js %}{% endblock %}
     </head>
 
@@ -53,7 +52,7 @@
                 <ul class="header-nav">
                     <a href="">          <li{% if 'index'     in filename %} class="active"{% endif %}>Introduction</li></a>
                     <a href="makeup/">   <li{% if 'makeup'    in filename %} class="active"{% endif %}>Class Makeup &amp; Admissions</li></a>
-                    {# <a href="academics/"> #}<li{% if 'academics' in filename %} class="active"{% endif %} class="inactive">Academics &amp; Extracurriculars</li>{# </a> #}
+                    <a href="academics/"><li{% if 'academics' in filename %} class="active"{% endif %}>Academics &amp; Extracurriculars</li></a>
                     {# <a href="lifestyle/"> #}<li{% if 'lifestyle' in filename %} class="active"{% endif %} class="inactive">Beliefs &amp; Lifestyle</li>{# </a> #}
                 </ul>
             </div>
@@ -79,7 +78,7 @@
                 <div id="topicnav">
                     <ul>
                         <li {% if is_data %}id="subnav"{% endif %}>
-                            <a href="http://features.thecrimson.com/2015/freshman-survey/{% block data_link %}{% endblock %}">
+                            <a href="{# http://features.thecrimson.com/2015/freshman-survey/ #}{% block data_link %}{% endblock %}">
                                 <span id="data-button">{% if is_data %}The Data{% else %}See Data{% endif %}</span>
                             </a>
                             <ul>
@@ -87,7 +86,7 @@
                             </ul>
                         </li>
                         <li {% if is_narrative %}id="subnav"{% endif %}>
-                            <a href="http://features.thecrimson.com/2015/freshman-survey/{% block narrative_link %}{% endblock %}">
+                            <a href="{# http://features.thecrimson.com/2015/freshman-survey/ #}{% block narrative_link %}{% endblock %}">
                                 <span id="narrative-button">{% if is_narrative %}The Narrative{% else %}Read Narrative{% endif %}</span>
                             </a>
                             <ul>
@@ -95,7 +94,7 @@
                             </ul>
                         </li>
                         <li {% if is_yale %}id="subnav"{% endif %}>
-                            <a href="http://features.thecrimson.com/2015/freshman-survey/{% block yale_link %}{% endblock %}">
+                            <a href="{# http://features.thecrimson.com/2015/freshman-survey/ #}{% block yale_link %}{% endblock %}">
                                 <span id="yale-button">How Yale Compares</span>
                             </a>
                             <ul>
