--- a/jinja2/lifestyle-narrative.html.jinja2
+++ b/jinja2/lifestyle-narrative.html.jinja2
@@ -13,11 +13,14 @@
     <li>Extracurricular Pursuits</li>
     <li>Politics and Religion</li>
     <li>Technology</li>
-    <li>Admissions</li>
+{% endblock %}
+
+{% block cover_image %}
+    <img class="full-width" src="img/cover_2019_3.jpg">
 {% endblock %}
 
 {% block content %}
-    <div id="subhead">Makeup of the Class</div>
+    <div id="subhead">Beliefs and Lifestyle</div>
     <div id="narrative" class="intro scroll-row">
         <p id="byline">
             <i>By</i>
