--- a/jinja2/lifestyle-yale.html.jinja2
+++ b/jinja2/lifestyle-yale.html.jinja2
@@ -8,6 +8,10 @@
 {% block narrative_link %}lifestyle-narrative/{% endblock %}
 {% block yale_link %}lifestyle-yale/{% endblock %}
 
+{% block cover_image %}
+    <img class="full-width" src="img/cover_2019_3.jpg">
+{% endblock %}
+
 {% block content %}
     <div id="subhead">Freshman Yalies Support Divestment, Have Had Less Sex than Harvard Freshmen</div>
     <div id="narrative" class="intro scroll-row">
