--- a/jinja2/lifestyle.html.jinja2
+++ b/jinja2/lifestyle.html.jinja2
@@ -424,6 +424,9 @@
                 <a href="#sex-final-clubs-tab" data-toggle="tab">Sexual Activity by Social Club Interest</a>
             </li>
             <li>
+                <a href="#sex-gap-tab" data-toggle="tab">Sexual Activity by Gap Year Status</a>
+            </li>
+            <li>
                 <a href="#sex-age-tab" data-toggle="tab">Age of First Sexual Activity</a>
             </li>
             <li>
@@ -453,6 +456,11 @@
             <li id="sex-final-clubs-tab">
                 <h2>Sexual Activity by Social Club Interest</h2>
                 <div id="sex-final-clubs" class="graph"></div>
+                <p></p>
+            </li>
+            <li id="sex-gap-tab">
+                <h2>Sexual Activity by Gap Year Status</h2>
+                <div id="sex-gap" class="graph"></div>
                 <p></p>
             </li>
             <li id="sex-age-tab">
@@ -620,6 +628,12 @@
             <li>
                 <a href="#twitter-tab" data-toggle="tab">Twitter Usage</a>
             </li>
+            <li>
+                <a href="#snapchat-tab" data-toggle="tab">Snapchat Usage</a>
+            </li>
+            <li>
+                <a href="#instagram-tab" data-toggle="tab">Instagram Usage</a>
+            </li>
         </ul>
         <ul class="tab-panes">
             <li id="computers-raw-tab" class="active">
@@ -650,6 +664,16 @@
             <li id="twitter-tab">
                 <h2>Twitter Usage</h2>
                 <div id="twitter" class="graph"></div>
+                <p></p>
+            </li>
+            <li id="snapchat-tab">
+                <h2>Snapchat Usage</h2>
+                <div id="snapchat" class="graph"></div>
+                <p></p>
+            </li>
+            <li id="instagram-tab">
+                <h2>Instagram Usage</h2>
+                <div id="instagram" class="graph"></div>
                 <p></p>
             </li>
         </ul>
