--- a/jinja2/lifestyle.html.jinja2
+++ b/jinja2/lifestyle.html.jinja2
@@ -121,6 +121,9 @@
             <li>
                 <a href="#politics-ethnicity-tab" data-toggle="tab">Politics by Ethnicity</a>
             </li>
+            <li>
+                <a href="#politics-divestment-tab" data-toggle="tab">Fossil Fuel Divestment at Harvard</a>
+            </li>
         </ul>
         <ul class="tab-panes">
             <li id="politics-tab" class="active">
@@ -407,6 +410,11 @@
             <li id="politics-ethnicity-tab">
                 <h2>Politics by Ethnicity</h2>
                 <div id="politics-ethnicity" class="graph"></div>
+                <p></p>
+            </li>
+            <li id="politics-divestment-tab">
+                <h2>Fossil Fuel Divestment at Harvard</h2>
+                <div id="politics-divestment"></div>
                 <p></p>
             </li>
         </ul>
