--- a/jinja2/_base.html.jinja2
+++ b/jinja2/_base.html.jinja2
@@ -5,8 +5,8 @@
 
         <title>The Harvard Crimson | Class of 2019 By the Numbers</title>
 
-        <!-- <base href="http://features.thecrimson.com/2015/freshman-survey/"> -->
-        <base href="/">
+        <base href="http://features.thecrimson.com/2015/freshman-survey/">
+        <!-- <base href="/"> -->
 
         <link href="http://fonts.googleapis.com/css?family=Lato:400,700|Crimson|Colaborate" rel="stylesheet" type="text/css">
         <link rel="stylesheet" type="text/css" href="css/fresh.css">
